# gorilla

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: apibench.md  custom-template.md  feature_request.md  hosted-gorilla-.md
data/: README.md
data/api/: huggingface_api.jsonl  tensorflowhub_api.jsonl  torchhub_api.jsonl
data/apibench/: huggingface_eval.json  tensorflow_eval.json  torchhub_eval.json  torchhub_train.json
data/apizoo/: shawnharmsen1.json
eval/: README.md  get_llm_responses.py
eval/eval-data/questions/huggingface/: questions_huggingface_0_shot.jsonl  questions_huggingface_bm25.jsonl  questions_huggingface_gpt_index.jsonl  questions_huggingface_oracle.jsonl
eval/eval-data/questions/tensorflowhub/: questions_tensorflowhub_0_shot.jsonl  questions_tensorflowhub_bm25.jsonl  questions_tensorflowhub_gpt_index.jsonl  questions_tensorflowhub_oracle.jsonl
eval/eval-data/questions/torchhub/: questions_torchhub_0_shot.jsonl  questions_torchhub_bm25.jsonl  questions_torchhub_gpt_index.jsonl  questions_torchhub_oracle.jsonl
eval/eval-data/responses/huggingface/: response_huggingface_Gorilla_FT_0_shot.jsonl  response_huggingface_Gorilla_FT_bm25.jsonl  (+6 more)
eval/eval-scripts/: ast_eval_hf.py  ast_eval_tf.py  ast_eval_th.py
eval/eval-scripts/codebleu/: bleu.py  dataflow_match.py  syntax_check.py  syntax_match.py  weighted_ngram_match.py
inference/: README.md  apply_delta.py  gorilla_eval.py
inference/example_questions/: example_questions.jsonl
inference/serve/: gorilla_cli.py  gorilla_falcon_cli.py
(+41 files in other folders)
